--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "anuejn",
   "license": "AGPL-3.0",
   "scripts": {
-    "start": "parcel ./src/index.html"
+    "start": "parcel ./src/index.html",
+    "build": "parcel build --public-url ./ ./src/index.html"
   },
   "devDependencies": {
     "parcel-bundler": "^1.7.1"
